--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -9,4 +9,38 @@
         tools:showIn="@layout/app_bar_main"
         tools:context=".MainActivity">
 
+
+    <TextView android:layout_width="0dp"
+              android:layout_height="wrap_content"
+              android:text="Please Log-in"
+              android:textAlignment="center"
+              app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+              android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
+              android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:id="@+id/mainChannelName"/>
+    <EditText
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:ems="10"
+            android:id="@+id/messageTextField"
+            android:singleLine="false" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginRight="8dp" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+            android:hint="your message..."/>
+    <ImageButton
+            android:layout_width="45dp"
+            android:background="#00000000"
+            android:tint="@color/colorPrimary"
+            android:layout_height="45dp" app:srcCompat="@drawable/ic_menu_send"
+            android:id="@+id/sendMessageButton" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent" android:onClick="sendMessageOnClicked"/>
+    <android.support.v7.widget.RecyclerView
+            android:layout_width="395dp"
+            android:layout_height="587dp"
+            app:layout_constraintTop_toBottomOf="@+id/mainChannelName" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/messageTextField" android:id="@+id/messageListView"/>
+
 </android.support.constraint.ConstraintLayout>
