Done with LoginActivityUI :D

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#5489c6</color>
     <color name="colorPrimaryDark">#5489c6</color>
-    <color name="colorAccent">#5eaoc9</color>
+    <color name="colorAccent">#00BCD4</color>
 </resources>
